--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -405,23 +405,28 @@ Our approach is in a way between those two contributions as we propose to introd
 %Notamment les fonctions de bases forment un réseau de gaussienne couvrant l'espace d'état à deux dimensions, la première étant la position angulaire du pendule (la verticale correspondant à un angle de valeur nulle)
 %la seconde étant sa vitesse angulaire.\\
 The inverted pendulum problem consists in maintaining in equilibrium a pendulum with one degree of freedom. This is a classical problem in the reinforcement learning field.
-The policy of our expert is determined by an RL-algortihm called LSPI which is explained in the article \cite{lagoudakis2003least}. The policy of the apprentice, which is the policy
-optimizing the reward function of our algorithm given Figure \ref{onlyFig.fig} (a), manages systematically  
+The policy of our expert is determined by an RL-algortihm called LSPI which is explained in the article \cite{lagoudakis2003least}. The different settings used, from the value of the pendulum mass
+to the choice of the features, are conform to the settings of \cite{lagoudakis2003least}. In particular, the features are a gaussian network covering the two dimensional space: the first dimension
+is the angular position of the pendulum (where the verticale corresponds to the angle zero) and the second one is the angular speed.\\   
 %La politique optimisant la fonction de récompense donnée Figure \ref{onlyFig.fig} (a) parvient systématiquement à maintenir le pendule en équilibre durant 3000 pas de temps.
 %Ces derniers ayant une valeur d'un dixième de seconde, cela signifie que nous interrompons l'expert après 5 minutes de contrôle sans chute du pendule.\\
-
+The policy of the expert, which is the policy optimizing the reward function given Figure \ref{onlyFig.fig} (a), manages systematically the maintain the pendulum during 3000 time-steps.
+The time-steps having a value of 0.1s, this means that we are interrupting the expert after 5 minutes without the fall of the pendulum.\\
 %Le but de cette expérience est de montrer que notre algorithme est capable, à partir des seules transitions fournies par l'expert et de la définition des fonctions de bases,
 %de retrouver une récompense telle qu'un agent entraîné sur cette récompense puisse lui aussi faire balancer le pendule durant 5 minutes sans échec.
 %Cela n'est pas trivial étant donné que l'espace d'état est continu et que les données fournies par l'expert n'en couvrent qu'une petite partie
 %(correspondant à la position verticale et son voisinage proche).\\
-
-%Ce dernier point est d'ailleur la raison pour laquelle l'algorithme d'\citet{abbeel2004apprenticeship} ne parvient pas à résoudre le problème à l'aide des seules transitions de l'expert.
+The aim of this experience is to show that our algorithm is able, only from the samples of the transitions given by the expert and the definition of the features, to find a reward function
+which will allow an agent trained with this reward function to maintain the pendulum in equilibrium during 5 minutes without fall. This is not a trivial problem because the state space is
+continuous and that the data from the expert are only covering a party of it.\\
+%Ce dernier point est d'ailleurs la raison pour laquelle l'algorithme d'\citet{abbeel2004apprenticeship} ne parvient pas à résoudre le problème à l'aide des seules transitions de l'expert.
 %En effet, comme cela a été montré dans \citep{klein2011batch}, à moins de fournir un certain nombre de transitions aléatoires couvrant tout l'espace d'état il est impossible d'utiliser
 %les algorithmes itératifs du type de celui d'\citet{abbeel2004apprenticeship}. Ces algorithmes procèdent par itérations à l'élaboration d'une politique $\pi$ dont l'attribut vectoriel
 %moyen est utilisée en association à celle de l'expert. Cette politique est obtenue par optimisation d'une récompense sur le PDM dans lequel évolue l'expert ; cette résolution du problème
 %direct à chaque itération ne peut se faire si l'on ne dispose que de données ne couvrant qu'une petite partie de l'espace d'état. Comme notre algorithme ne nécessite pas le calcul d'autre
 %attribut vectoriel moyen que celui de l'expert, la résolution du problème direct est inutile et nous ne rencontrons pas ce problème.
 %%%
+This last point is the reason why the algorithm in the article \citet{abbeel2004apprenticeship} does not manage to resolve this problem only with the samples of the transitions of the expert.
 \subsection{Illustrations}
 %%%
 \begin{figure}[ht]
